--- a/src/styles/components/clientdocuments.css
+++ b/src/styles/components/clientdocuments.css
@@ -360,6 +360,15 @@
 
 
 
+.editar-gm-process{
+    font-size: 0.6rem;
+    background-color: #09090a;
+    padding: 0.1rem 0.3rem;
+    color: white;
+    border-radius: 0.2rem;
+}
+
+
 
 
 
