--- a/src/styles/components/candidate.css
+++ b/src/styles/components/candidate.css
@@ -16,3 +16,166 @@
     border-top-left-radius: 0.5rem;
     border-top-right-radius: 0.5rem;
 }
+
+
+
+
+
+
+
+
+
+
+.container-candidates-status-a{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 1rem;
+    border-radius: 1rem;
+    background-color: white;
+}
+.sccs{
+    width: 19%;
+    height: 540px;
+    overflow-y: scroll;
+    font-size: 0.7rem;
+    letter-spacing: 0.05rem;
+    border-left: 5px dotted #f3f3f3;
+}
+.sccs:first-child{
+    border: none;
+}
+.sccs h1{
+    margin-top: 1rem;
+    margin-left: 1rem;
+    margin-bottom: 1rem;
+    color: #9b9b9b;
+    padding-bottom: 1rem;
+    background-color: white;
+    border-bottom: 1px solid #f3f3f3;
+}
+
+
+
+
+
+.item-profile{
+    margin-top: 1rem;
+    margin-left: 1rem;
+    padding: 1rem;
+    overflow: hidden;
+    background-color: #fbfbff;
+    border-radius: 1rem;
+}
+.round-profile{
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: white;
+    border-radius: 50%;
+    margin-bottom: 0.5rem;
+}
+.names-profile{
+    font-size: 0.6rem;
+    display: flex;
+    flex-direction: column;
+}
+.names-profile b:first-child{
+    letter-spacing: 0.05rem;
+    margin-bottom: 0.1rem;
+}
+.names-profile span{
+    color: #747474;
+}
+.position-item{
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+    width: fit-content;
+    font-size: 0.5rem;
+    padding: 0.1rem 0.6rem;
+    color: white;
+    border: 2px solid #2b2929;
+    color: #2b2929;
+    border-radius: 1rem;
+}
+.address{
+    border-top: 1px solid #e2e2e2;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 0.6rem;
+    padding-top: 0.5rem;
+}
+.address p{
+    margin-left: 0.5rem;
+    color: #9b9b9b;
+}
+
+
+
+
+
+
+
+
+
+
+
+ /* Estilos para el scroll vertical */
+ .sccs::-webkit-scrollbar {
+    width: 3px; /* Ancho del scroll */
+    height: 3px;
+  }
+  
+  .sccs::-webkit-scrollbar-track {
+    background: #ffffff; /* Color de fondo del track */
+  }
+  
+  .sccs::-webkit-scrollbar-thumb {
+    background: #d4d4d4; /* Color del thumb (barra deslizante) */
+    opacity: 0;
+    border-radius: 3px; /* Borde redondeado del thumb */
+  }
+  
+  /* Pseudoelemento antes del thumb */
+  .sccs::-webkit-scrollbar-thumb:hover::before {
+    opacity: 1; /* Hace visible el pseudoelemento */
+  }
+  
+  .sccs::-webkit-scrollbar-thumb::before {
+    content: ''; /* Contenido del pseudoelemento */
+    position: absolute; /* Establece la posición absoluta */
+    width: 8px; /* Ancho igual al del thumb */
+    height: 20px; /* Altura del pseudoelemento */
+    top: 1; /* Lo coloca arriba del thumb */
+    left: 0; /* Lo coloca a la izquierda del thumb */
+    background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
+    border-radius: 4px; /* Borde redondeado */
+    transition: opacity 0.3s; /* Efecto de transición */
+    opacity: 0; /* Inicialmente invisible */
+  }
+  
+  /* Pseudoelemento después del thumb */
+  .sccs::-webkit-scrollbar-thumb::after {
+    content: ''; /* Contenido del pseudoelemento */
+    position: absolute; /* Establece la posición absoluta */
+    width: 8px; /* Ancho igual al del thumb */
+    height: 20px; /* Altura del pseudoelemento */
+    bottom: 0; /* Lo coloca abajo del thumb */
+    left: 0; /* Lo coloca a la izquierda del thumb */
+    background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
+    border-radius: 4px; /* Borde redondeado */
+    transition: opacity 0.3s; /* Efecto de transición */
+    opacity: 0 !important; /* Inicialmente invisible */
+  }
+  
+  /* Al hacer hover sobre el scroll */
+  .sccs:hover::-webkit-scrollbar-thumb::before,
+  .sccs:hover::-webkit-scrollbar-thumb::after {
+    opacity: 1; /* Hace visible los pseudoelementos */
+  }
