--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -40,6 +40,13 @@
     padding-left: 0 !important;
     position: relative;
 }
+.not-data-hero{
+  width: 100%;
+  height: 480px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .container-workers{
   display: flex;
   flex-direction: column;
