it works, it was added icons when there not data

--- a/src/styles/components/precandidate.css
+++ b/src/styles/components/precandidate.css
@@ -32,6 +32,7 @@
 
 .container-candidates{
     display: flex;
+    height: 470px;
     flex-direction: column;
     background-color: white;
     border-bottom-left-radius: 0.5rem;
