--- a/src/styles/components/header.css
+++ b/src/styles/components/header.css
@@ -42,13 +42,14 @@
 
 
 .notifications-header{
+    max-height: 250px;
     position: absolute;
     right: 1.5rem;
     transform: translateY(68%);
     z-index: 2;
     box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
     width: fit-content;
-    overflow: hidden;
+    overflow-y: scroll;
     border-radius: 0.5rem;
 }
 .counter-notify{
@@ -69,3 +70,64 @@
     margin-left: 0.8rem !important;
     font-size: 0.8rem !important;
 }
+
+
+
+
+
+
+
+
+  /* Estilos para el scroll vertical */
+  .notifications-header::-webkit-scrollbar {
+    width: 5px; /* Ancho del scroll */
+    height: 5px;
+  }
+  
+  .notifications-header::-webkit-scrollbar-track {
+    background: #ffffff; /* Color de fondo del track */
+  }
+  
+  .notifications-header::-webkit-scrollbar-thumb {
+    background: #d4d4d4; /* Color del thumb (barra deslizante) */
+    opacity: 0;
+    border-radius: 3px; /* Borde redondeado del thumb */
+  }
+  
+  /* Pseudoelemento antes del thumb */
+  .notifications-header::-webkit-scrollbar-thumb:hover::before {
+    opacity: 1; /* Hace visible el pseudoelemento */
+  }
+  
+  .notifications-header::-webkit-scrollbar-thumb::before {
+    content: ''; /* Contenido del pseudoelemento */
+    position: absolute; /* Establece la posición absoluta */
+    width: 8px; /* Ancho igual al del thumb */
+    height: 20px; /* Altura del pseudoelemento */
+    top: 1; /* Lo coloca arriba del thumb */
+    left: 0; /* Lo coloca a la izquierda del thumb */
+    background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
+    border-radius: 4px; /* Borde redondeado */
+    transition: opacity 0.3s; /* Efecto de transición */
+    opacity: 0; /* Inicialmente invisible */
+  }
+  
+  /* Pseudoelemento después del thumb */
+  .notifications-header::-webkit-scrollbar-thumb::after {
+    content: ''; /* Contenido del pseudoelemento */
+    position: absolute; /* Establece la posición absoluta */
+    width: 8px; /* Ancho igual al del thumb */
+    height: 20px; /* Altura del pseudoelemento */
+    bottom: 0; /* Lo coloca abajo del thumb */
+    left: 0; /* Lo coloca a la izquierda del thumb */
+    background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
+    border-radius: 4px; /* Borde redondeado */
+    transition: opacity 0.3s; /* Efecto de transición */
+    opacity: 0 !important; /* Inicialmente invisible */
+  }
+  
+  /* Al hacer hover sobre el scroll */
+  .notifications-header:hover::-webkit-scrollbar-thumb::before,
+  .notifications-header:hover::-webkit-scrollbar-thumb::after {
+    opacity: 1; /* Hace visible los pseudoelementos */
+  }
