coloque los load en las tablas al momento de editar

--- a/src/styles/components/clientdocuments.css
+++ b/src/styles/components/clientdocuments.css
@@ -253,7 +253,7 @@
     font-size: 1.2rem;
 }
 .btn-check-card{
-    color: #15101f;
+    color: #8b8b8b;
 }
 .btn-send-gm{
     color: hsl(197, 100%, 50%);
