--- a/src/styles/components/clientdocuments.css
+++ b/src/styles/components/clientdocuments.css
@@ -252,6 +252,9 @@
     color: #8b8b8b;
     font-size: 1.2rem;
 }
+.send-excel-to-keny{
+    color: #095e2f;
+}
 .btn-check-card{
     color: #8b8b8b;
 }
