--- a/src/styles/components/clientdocuments.css
+++ b/src/styles/components/clientdocuments.css
@@ -20,18 +20,41 @@
 
 
 /*ES LA TARJETA EN SI*/
-.card-client{
+.container-card-client{
     width: 49%;
-    height: 260px;
-    padding: 1rem;
-    position: relative;
+    height: 255px;
     background-color: white;
     border-radius: 0.8rem;
     margin-right: 1rem;
+    padding: 0.5rem 0.25rem;
+    overflow: hidden;
+}
+.card-client{
+    width: 100%;
+    height: 100%;
+    position: relative;
     overflow-y: auto;
+}
+.label-status-sent-excel{
+    font-size: 0.6rem;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: fit-content;
+    border-radius: 1rem;
+}
+.label-status-sent-excel > div{
+    width: 5px;
+    height: 5px;
+    margin-right: 0.5rem;
+    border-radius: 50%;
 }
 .card-client:last-child{
     margin-right: 0 !important;
+}
+.card-client > header{
+    background-color: white;
+    padding: 1rem;
 }
 .header-cc{
     display: flex;
@@ -156,9 +179,9 @@
 
 
 .form-cc{
-    margin-top: 1rem;
-    padding-top: 1rem;
+    height: 30px;
     position: relative;
+    padding: 0.7rem;
 }
 .error-ccd{
     position: absolute;
@@ -169,12 +192,10 @@
 }
 .form-cc form{
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
 }
 .form-cc form fieldset{
-    width: 33%;
     flex-direction: row;
     align-items: center;
     margin: 0;
@@ -199,12 +220,12 @@
 
 
 .family-data{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     font-size: 0.6rem;
-    margin-top: 1rem;
+    margin-top: 2rem;
+    position: relative;
 }
 .family-data fieldset{
     flex-direction: row;
@@ -234,19 +255,16 @@
     color: white;
 }
 .data-checkbox-family{
-    margin-top: 2rem;
-    border-top: 1px solid #e6e6e6;
+    padding: 1rem 0;
 }
 .actions-cw{
     width: 100%;
+    padding: 1rem;
     position: absolute;
-    top: 0.5rem;
-    left: 0rem;
-    padding: 0 1rem;
+    top: 0;
+    left: 0;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
-    margin-top: 0.5rem;
 }
 .btn-back-card{
     color: #8b8b8b;
@@ -268,16 +286,17 @@
 
 .info-documents-card{
     font-size: 0.6rem;
+    padding: 1rem;
     color: #646464;
+    margin-top: -1.5rem;
 }
-.data-me{
-    margin-top: 1rem;
-    border-top: 1px solid #eeeeee;
-    padding-top: 0.5rem;
+.data-me-border{
+    padding-bottom: 1rem;
+    border-bottom: 1px solid #f0f0f0;
 }
 .data-me > p{
     letter-spacing: 0.05rem;
-    margin-bottom: 0.5rem;
+    color: #09090a;
 }
 .data-me .me-checks{
     display: flex;
@@ -285,6 +304,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+.me-checks-grid{
+    display: grid !important;
+    grid-template-columns: 2fr 1fr 1fr;
 }
 .data-me .me-checks .me-check{
     margin-top: 0.5rem;
@@ -298,14 +321,16 @@
 .data-me .me-checks .me-check p{
     margin-left: 0.5rem;
 }
+
 .data-them{
     margin-top: 0.5rem;
-    border-top: 1px solid #eee;
-    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #eee;
 }
 .data-them > p{
     letter-spacing: 0.05rem;
     margin-bottom: 0.5rem;
+    color:#09090a;
 }
 .data-them .familiar{
     display: flex;
@@ -321,7 +346,10 @@
     margin-left: 0.5rem;
 }
 
-
+.data-me{
+    margin-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
 
 
 
@@ -329,19 +357,17 @@
 .item-familiar{
     margin-top: 1rem;
     font-size: 0.6rem;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: 2fr 2fr 2fr 1fr;
+    place-items: center;
     padding: 0.5rem;
     border-radius: 0.3rem;
-    background-color: #f7f7f7;
+    background-color: #fafafa;
 }
 .item-familiar fieldset{
-    width: 33%;
     display: flex;
     flex-direction: row;
     align-items: center;
-    margin-bottom: 1rem;
 }
 .item-familiar fieldset label{
     margin: 0 !important;
@@ -379,8 +405,8 @@
 
 /* Estilos para el scroll vertical */
 .details-more-cc::-webkit-scrollbar {
-    width: 5px; /* Ancho del scroll */
-    height: 5px;
+    width: 3px; /* Ancho del scroll */
+    height: 3px;
   }
   
   .details-more-cc::-webkit-scrollbar-track {
@@ -439,8 +465,8 @@
 
   /* Estilos para el scroll vertical */
 .card-client::-webkit-scrollbar {
-    width: 5px; /* Ancho del scroll */
-    height: 5px;
+    width: 3px; /* Ancho del scroll */
+    height: 3px;
   }
   
   .card-client::-webkit-scrollbar-track {
@@ -461,13 +487,12 @@
   .card-client::-webkit-scrollbar-thumb::before {
     content: ''; /* Contenido del pseudoelemento */
     position: absolute; /* Establece la posición absoluta */
-    width: 8px; /* Ancho igual al del thumb */
+    width: 3px; /* Ancho igual al del thumb */
     height: 20px; /* Altura del pseudoelemento */
     top: 1; /* Lo coloca arriba del thumb */
-    left: 0; /* Lo coloca a la izquierda del thumb */
+    right: 0; /* Lo coloca a la izquierda del thumb */
     background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
-    border-radius: 4px; /* Borde redondeado */
-    transition: opacity 0.3s; /* Efecto de transición */
+    border-radius: 1rem; /* Borde redondeado */
     opacity: 0; /* Inicialmente invisible */
   }
   
@@ -481,7 +506,6 @@
     left: 0; /* Lo coloca a la izquierda del thumb */
     background: rgba(0, 0, 0, 0.5); /* Color del pseudoelemento */
     border-radius: 4px; /* Borde redondeado */
-    transition: opacity 0.3s; /* Efecto de transición */
     opacity: 0 !important; /* Inicialmente invisible */
   }
   
