--- a/src/styles/components/candidate.css
+++ b/src/styles/components/candidate.css
@@ -66,7 +66,7 @@
     margin-left: 1rem;
     padding: 1rem;
     overflow: hidden;
-    background-color: #fbfbff;
+    background-color: #f3f3f3;
     border-radius: 1rem;
 }
 .round-profile{
