--- a/src/styles/gm/gm.css
+++ b/src/styles/gm/gm.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100vh;
     display: flex;
+    overflow: hidden;
     flex-direction: column;
     justify-content: flex-start;
 }
