--- a/src/styles/gm/navbar.css
+++ b/src/styles/gm/navbar.css
@@ -36,6 +36,7 @@
     cursor: pointer;
     border-radius: 0.5rem;
     transition: all ease-in-out 0.3s;
+    font-size: 0.7rem;
 }
 .navbar-gm-main ul li:hover{
     background-color: #f0f0f0;
@@ -43,8 +44,10 @@
 .btn-show-navbar-main{
     font-size: 1.5rem;
 }
-.rotate-navbar-main{
-    color: #5c5c5c;
+.btn-contacts-navbar-main{
+    font-size: 1.2rem;
+    margin-left: 1rem;
+    color: rgb(17, 17, 16);
 }
 .active-option-main{
     background-color: #f0f0f0;
