--- a/src/styles/gm/companyItem.css
+++ b/src/styles/gm/companyItem.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     padding: 1rem;
     border-radius: 0.5rem;
+    cursor: pointer;
 }
 .company-item .profile-company-item{
     width: 25%;
@@ -10,6 +11,11 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
+}
+.info-company-item{
+    display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 .company-item > div{
