--- a/src/styles/gm/table.css
+++ b/src/styles/gm/table.css
@@ -1,12 +1,15 @@
+.table-gm{
+    width: 100%;
+}
 .table-gm thead tr td{
-    font-size: 0.5rem;
-    padding: 0.5rem;
+    color: rgb(75, 75, 75);
+}
+.table-gm tbody tr:hover{
+    background-color: rgb(255, 239, 235);
+    cursor: pointer;
 }
 .table-gm tbody tr td{
-    font-size: 0.5rem !important;
-    padding: 0.5rem;
     border-bottom: none !important;
-    text-align: left;
 }
 
 
@@ -17,6 +20,6 @@
     bottom: -2px; 
     width: 100%; 
     height: 2px; 
-    background-color: rgb(250, 250, 250); 
+    background-color: rgb(255, 211, 205); 
     z-index: -1; 
 }
